fix(style): page too big

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -15,19 +15,19 @@
 }
 
 .inside_block {
-  height: 100%;
-  width: 100%;
+  height: calc(100% - 20px);
+  width: calc(100%-20px);
   margin: 10px;
 }
 
 @media (max-width: 1320px) {
   .home_container {
-    grid-template-columns: 60px 1fr 400px;
+    grid-template-columns: 50px 1fr 400px;
   }
 }
 
 @media (max-width: 980px) {
   .home_container {
-    grid-template-columns: 60px 1fr 60px;
+    grid-template-columns: 50px 1fr 50px;
   }
 }
